safari scrollbar disappear fixed

--- a/src/component/menu/menu.sass
+++ b/src/component/menu/menu.sass
@@ -117,6 +117,7 @@ button.team-btn
   padding-bottom: 100px
   overflow: hidden auto
   position: relative
+  -webkit-transform: translateZ(0)
   .head-tools
     position: sticky
     top: 0
@@ -167,6 +168,7 @@ button.team-btn
     .content
       flex: 1
       margin-right: 10px
+      padding: 5px
       overflow: hidden
       .name
         @include text-overflow
