--- a/src/component/reader/reader.sass
+++ b/src/component/reader/reader.sass
@@ -10,6 +10,7 @@
     flex: 1
     overflow: hidden auto
     background-color: #fafafa
+    -webkit-transform: translateZ(0)
     .note-page
       border: $default-border
       &:not(:first-of-type)
