--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,5 @@
 @import "~antd/dist/antd.css"
+
 body
   margin: 0
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
@@ -17,7 +18,7 @@ code, .code-font
 
 ::-webkit-scrollbar-thumb
   border-radius: 3px
-  background: rgba(0,0,0,.2)
+  background: #0003
 
 *:not(input)
   user-select: none
